--- a/Adventure-Tool/Adventure-Tool_log.html
+++ b/Adventure-Tool/Adventure-Tool_log.html
@@ -22,7 +22,7 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <body>
 <h2>Adventure-Tool Log</h2>
 <p class="info">アプリケーションを開始します。</p>
-<p class="info">2018/8/8 03:09:37</p>
+<p class="info">2018/8/8 05:05:47</p>
 <p class="info">エンジンを初期化します。</p>
 <p class="info">Siv3D Engine (Debug build) version August 2016 v2 (x86)</p>
 <p class="debug">FileMonitor[0(null)] を作成しました。</p>
@@ -32,9 +32,9 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <p class="debug">INIReader &quot;Engine/config.ini&quot; をロードしました。</p>
 <p class="debug">BinaryReader &quot;C:/Users/takum/Desktop/Adventure-Tool/Adventure-Tool/Engine/config.ini&quot; をクローズしました。</p>
 <p class="debug">TextReader &quot;C:/Users/takum/Desktop/Adventure-Tool/Adventure-Tool/Engine/config.ini&quot; をクローズしました。</p>
-<p class="debug">リソースにスプラッシュ画像が含まれていないため、スプラッシュ画像を表示しません。</p>
 <p class="info">SSE3/SSE4.1/SSE4.2 をサポート</p>
 <p class="info">AVX2 をサポート</p>
+<p class="debug">リソースにスプラッシュ画像が含まれていないため、スプラッシュ画像を表示しません。</p>
 <p class="debug">GDI+ を初期化しました。</p>
 <p class="debug">Media Foundation を初期化しました。</p>
 <p class="info">MP3 デコーダーは libmpg123 を使用します。</p>
@@ -334,7 +334,11 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <p class="info">エンジンの初期化が完了しました。</p>
 <p class="info">メインスレッドを開始しました。</p>
 <hr width="76%">
+<p class="debug">BinaryReader &quot;C:/Users/takum/Documents/image.gif&quot; をオープンしました。サイズ: 23.7KiB</p>
+<p class="debug">BinaryReader &quot;C:/Users/takum/Documents/image.gif&quot; をクローズしました。</p>
+<p class="debug">Texture[13] を作成しました。</p>
 <p class="info">System::Update() : ExitEvent EscapeKey</p>
+<p class="debug">Texture[13] を破棄しました。</p>
 <hr width="76%">
 <p class="info">メインスレッドを終了しました。</p>
 <p class="info">ウィンドウメッセージの終了を待機中です。</p>
@@ -426,7 +430,7 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <p class="debug">FileMonitor[0(null)] を破棄しました。</p>
 <p class="debug">FileMonitor マネージャーを終了しました。</p>
 <p class="info">エンジンを終了しました。</p>
-<p class="info">2018/8/8 03:09:43</p>
+<p class="info">2018/8/8 05:05:55</p>
 
 <br>
 <p class="c0">Siv3D Engine August 2016 v2 (x86)</p>
