--- a/Adventure-Tool/Adventure-Tool_log.html
+++ b/Adventure-Tool/Adventure-Tool_log.html
@@ -22,7 +22,7 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <body>
 <h2>Adventure-Tool Log</h2>
 <p class="info">アプリケーションを開始します。</p>
-<p class="info">2018/8/8 06:27:51</p>
+<p class="info">2018/8/9 01:29:30</p>
 <p class="info">エンジンを初期化します。</p>
 <p class="info">Siv3D Engine (Debug build) version August 2016 v2 (x86)</p>
 <p class="debug">FileMonitor[0(null)] を作成しました。</p>
@@ -334,11 +334,16 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <p class="info">エンジンの初期化が完了しました。</p>
 <p class="info">メインスレッドを開始しました。</p>
 <hr width="76%">
+<p class="debug">Font[2] を作成しました。</p>
+<p class="debug">(dynamic texture) (サイズ 1024x160 Format: 41)</p>
+<p class="debug">Texture[13] を作成しました。</p>
 <p class="debug">BinaryReader &quot;C:/Users/takum/Documents/image.gif&quot; をオープンしました。サイズ: 23.7KiB</p>
 <p class="debug">BinaryReader &quot;C:/Users/takum/Documents/image.gif&quot; をクローズしました。</p>
-<p class="debug">Texture[13] を作成しました。</p>
+<p class="debug">Texture[14] を作成しました。</p>
 <p class="info">System::Update() : ExitEvent EscapeKey</p>
+<p class="debug">Texture[14] を破棄しました。</p>
 <p class="debug">Texture[13] を破棄しました。</p>
+<p class="debug">Font[2] を破棄しました。</p>
 <hr width="76%">
 <p class="info">メインスレッドを終了しました。</p>
 <p class="info">ウィンドウメッセージの終了を待機中です。</p>
@@ -430,7 +435,7 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <p class="debug">FileMonitor[0(null)] を破棄しました。</p>
 <p class="debug">FileMonitor マネージャーを終了しました。</p>
 <p class="info">エンジンを終了しました。</p>
-<p class="info">2018/8/8 06:28:13</p>
+<p class="info">2018/8/9 01:30:14</p>
 
 <br>
 <p class="c0">Siv3D Engine August 2016 v2 (x86)</p>
