--- a/Adventure-Tool/Adventure-Tool_log.html
+++ b/Adventure-Tool/Adventure-Tool_log.html
@@ -22,7 +22,7 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <body>
 <h2>Adventure-Tool Log</h2>
 <p class="info">アプリケーションを開始します。</p>
-<p class="info">2018/8/9 03:03:41</p>
+<p class="info">2018/8/9 05:20:22</p>
 <p class="info">エンジンを初期化します。</p>
 <p class="info">Siv3D Engine (Debug build) version August 2016 v2 (x86)</p>
 <p class="debug">FileMonitor[0(null)] を作成しました。</p>
@@ -334,17 +334,31 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <p class="info">エンジンの初期化が完了しました。</p>
 <p class="info">メインスレッドを開始しました。</p>
 <hr width="76%">
+<p class="debug">GUI アセット&quot;リソースプロパティ&quot; を登録しました。</p>
+<p class="debug">GUI[1] を作成しました。</p>
 <p class="debug">Font[2] を作成しました。</p>
 <p class="debug">解像度を 960x540 に変更しました。</p>
 <p class="debug">(dynamic texture) (サイズ 1024x160 Format: 41)</p>
 <p class="debug">Texture[13] を作成しました。</p>
+<p class="debug">(dynamic texture) (サイズ 1024x160 Format: 41)</p>
+<p class="debug">Texture[14] を作成しました。</p>
+<p class="debug">BinaryReader &quot;C:/Users/takum/Documents/image.gif&quot; をオープンしました。サイズ: 23.7KiB</p>
+<p class="debug">BinaryReader &quot;C:/Users/takum/Documents/image.gif&quot; をクローズしました。</p>
+<p class="debug">Texture[15] を作成しました。</p>
+<p class="debug">Font[3] を作成しました。</p>
+<p class="debug">(dynamic texture) (サイズ 1024x160 Format: 41)</p>
+<p class="debug">Texture[16] を作成しました。</p>
 <p class="info">System::Update() : ExitEvent EscapeKey</p>
-<p class="debug">Texture[13] を破棄しました。</p>
+<p class="debug">Texture[15] を破棄しました。</p>
+<p class="debug">Texture[14] を破棄しました。</p>
 <p class="debug">Font[2] を破棄しました。</p>
 <hr width="76%">
 <p class="info">メインスレッドを終了しました。</p>
 <p class="info">ウィンドウメッセージの終了を待機中です。</p>
 <p class="info">ウィンドウ表示を終了しました。</p>
+<p class="debug">Texture[16] を破棄しました。</p>
+<p class="debug">Font[3] を破棄しました。</p>
+<p class="debug">GUI[1] を破棄しました。</p>
 <p class="debug">Effect[0(null)] を破棄しました。</p>
 <p class="debug">エフェクトマネージャーを終了しました。</p>
 <p class="debug">InputLayout[5] を破棄しました。</p>
@@ -364,6 +378,7 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <p class="debug">Mesh マネージャーを終了しました。</p>
 <p class="debug">GUI[0(null)] を破棄しました。</p>
 <p class="debug">GUI マネージャーを終了しました。</p>
+<p class="debug">Texture[13] を破棄しました。</p>
 <p class="debug">Font[1] を破棄しました。</p>
 <p class="debug">Font[0(null)] を破棄しました。</p>
 <p class="debug">フォントマネージャーを終了しました。</p>
@@ -432,7 +447,7 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <p class="debug">FileMonitor[0(null)] を破棄しました。</p>
 <p class="debug">FileMonitor マネージャーを終了しました。</p>
 <p class="info">エンジンを終了しました。</p>
-<p class="info">2018/8/9 03:03:57</p>
+<p class="info">2018/8/9 05:21:03</p>
 
 <br>
 <p class="c0">Siv3D Engine August 2016 v2 (x86)</p>
